# opencv_scripts

./: README.md  background_subtraction.py  calibrate.py  calibrate_fisheye.py  camera_calibration.cpp  camera_settings.xml  images_list.xml  install.sh  mono_euroc.cc  normalizeImage.py  object_tracking.py  read_intrinsics.py  undistort.py  undistort_fisheye.py
_development/: test.py
_development/inpainting/: inpainting.cpp  inpainting.py
_development/sfm/: scene_reconstruction.cpp
aerialtransform/: CMakeLists.txt  README.md
aerialtransform/include/: EigenCoordConverter.h  PerspectiveTransform.hpp  eci_ecr.hpp  ecr_enu.hpp  geodetic_ecr.hpp  seuler.h  seuler.hpp  smatrix.h  smatrix.hpp  wgs84.h
aerialtransform/src/: EigenCoordConverter.cpp  PerspectiveTransform.cpp
aerialtransform/test/: testPerspective.cpp
calibration/: README.md  camera_calibration  camera_calibration.cpp  camera_settings.xml  out_camera_data.xml  read_intrinsics.py
calibration/cpp/: CMakeLists.txt  camera_calibration.cpp
calibration/cpp/config/: images_list.xml  out_camera_data.xml
calibration/include/: Settings.hpp
calibration/python/: calibrate_fisheye.py  read_intrinsics.py  undistort_fisheye.py
calibration/source/: Settings.cpp
calibration/tools/: camera_calibration.cpp
install/: install_python.bat
normalize/: normalize.py
settings/: camera_settings.xml  images_list.xml
sfm/: scene_reconstruction.cpp
stitching/: CMakeLists.txt  oksi-stitcher.cpp  stitcher
stitching/cpp/include/: oksi_stitcher.hpp
stitching/include/: oksi_stitcher.hpp
stitching/source/: oksi_stitcher.cpp  opencv_stitcher.cpp
tracking/: object_tracking.py
